8331352: error: template-id not allowed for constructor/destructor in C++20

Reviewed-by: mdoerr
Backport-of: 45792c5829fb1d5ee016c4a1fd6badb5d2b4239c